fix: collapsed 칩 디자인 및 버그 수정

--- a/src/app/study/mobile/subCategory/index.scss
+++ b/src/app/study/mobile/subCategory/index.scss
@@ -3,9 +3,10 @@
 .sub-category-collapsed-presenter-container {
     padding: .75rem .75rem;
     position: sticky;
-    top: 4.5rem;
+    top: 2.5rem;
     background: #fff;
     display: flex !important;
+    box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.08);
     align-items: center;
     overflow: auto;
     white-space: nowrap;
